rollback edge multiplicy being stored in the vertex tables. Instead the user will have to check the multiplicity constraint manually with count sqls